--- a/index.html
+++ b/index.html
@@ -244,29 +244,27 @@
     <section>
         <div class="menu-productos">
         <h3>Productos</h3>
+
         <button onclick="viewer.loadScene('vista1')">Área 1</button>
         <button onclick="viewer.loadScene('vista2')">Área 2</button>
+
         </div>
 
+        <h2 style="margin: auto;justify-content: center; text-align: center;">Version 1</h2>
+
         <div  id="panorama">
-            <h2>Version 1</h2>
             <h2 style="position: absolute; top: 20px; left: 20px; color: white; text-shadow: 0 0 5px rgba(0,0,0,0.7); z-index: 1;">Recorrido Virtual 360°</h2>
         </div>
 
-        <div id="vr2">
+        <!-- <div id="vr2">
+
             <h2>Version 2</h2>
-        </div>
+
+        </div> -->
+
         </section>
 
-<!-- <script>
-    pannellum.viewer('panorama', {
-      type: 'equirectangular',
-      panorama: 'imagenes/visual2.jpg',
-      autoLoad: true,
-      showZoomCtrl: true,
-      compass: true
-    });
-  </script> -->
+
 
  <script>
 
@@ -329,6 +327,19 @@ const viewer = pannellum.viewer('panorama', {
             yaw: 60,
             pitch: -1
           }
+        },
+        {
+          pitch: 4,
+          yaw: -80,
+          type: "info",
+          createTooltipFunc: productoHotspot,
+          createTooltipArgs: {
+            nombre: "Fresadora Vertical VMC-750",
+            specs: "Mesa 1000x500mm · Velocidad variable",
+            precio: "$95,000 MXN",
+            yaw: -80,
+            pitch: 4
+          }
         }
 
       ]
@@ -379,6 +390,19 @@ const viewer = pannellum.viewer('panorama', {
             yaw: 45,
             pitch: -2
           }
+        },
+        {
+          pitch: 1,
+          yaw: 65,
+          type: "info",
+          createTooltipFunc: productoHotspot,
+          createTooltipArgs: {
+            nombre: "Aplanadora de Carne CPX",
+            specs: "Precisión 0.01mm · 1500W",
+            precio: "$10,000 MXN",
+            yaw: 65,
+            pitch: 1
+          }
         }
 
       ]
@@ -398,7 +422,7 @@ function productoHotspot(hotSpotDiv, args) {
     <div class="producto-card">
       <h3>${args.nombre}</h3>
       <p>${args.specs}</p>
-      <strong>${args.precio}</strong><br><br>
+      <strong>${args.precio}</strong><br>
       <button onclick="modalinfo()">Cotizar</button>
     </div>
   `;
@@ -415,50 +439,6 @@ function productoHotspot(hotSpotDiv, args) {
 </script>
 
 <!-- formulario modal cotizacion -->
- <script>
-
-function modalinfo() {
-  document.getElementById("modalCotizacion").style.display = "flex";
-}
-
-function cerrarModal() {
-  document.getElementById("modalCotizacion").style.display = "none";
-}
-
-window.addEventListener("click", function(e) {
-  const modal = document.getElementById("modalCotizacion");
-  if (e.target === modal) {
-    modal.style.display = "none";
-  }
-});
-
-document.getElementById("formCotizacion").addEventListener("submit", function(e) {
-  e.preventDefault();
-
-  const producto = document.getElementById("productoSeleccionado").value;
-
-  alert("Solicitud enviada para: " + producto);
-
-  cerrarModal();
-});
-
-
-// Cerrar al hacer clic fuera
-window.addEventListener("click", function(e) {
-  const modal = document.getElementById("modalCotizacion");
-  if (e.target === modal) {
-    modal.style.display = "none";
-  }
-});
-
-// Simulación de envío
-document.getElementById("formCotizacion").addEventListener("submit", function(e) {
-  e.preventDefault();
-  alert("Solicitud enviada correctamente");
-  cerrarModal();
-});
-
-</script>
 
 <!-- Modal -->
 <div id="modalCotizacion" class="modal-overlay">
